Fix page scrollbar not interactable

--- a/app/components/Modules/Loading/styles.scss
+++ b/app/components/Modules/Loading/styles.scss
@@ -11,4 +11,5 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: -1;
 }
